# db_manager

./: README.md  main.py  pyproject.toml
data/: config.ini  employer_ids.json
src/: abs_manager.py  api_client.py  config.py  db_manager.py  hh_api_client.py  paths.py  utils.py
test/: conftest.py  test_create_database.py  test_hh_api_client.py  test_read_config.py  test_read_employers_list.py  test_save_to_database.py
